--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -154,6 +154,10 @@
             "florgame": {
                 "title": "FlorGame VR (Unity VR)",
                 "content": "This video showcases a demo of a VR game currently in development using Unity 6. The game challenges players to launch a projectile by applying an initial force and angle. A second hit can be applied mid-flight, guided by hand position, to correct its trajectory. Players can teleport to the ball’s location and are required to launch it again from the same X and Z coordinates—though the launch height remains flexible. The main objective is to activate all the flowers distributed throughout the map. Falling into water resets the player to the starting point, adding a light layer of challenge. Planned features include a timer and shot counter to enable leaderboard rankings, as well as multiple themed levels. Designed as a calm yet engaging experience, this game allows players to relax and enjoy the environment while honing their aiming skills."
+            },
+            "warehouse": {
+                "title": "SQL Warehouse Project",
+                "content": "This project implements a complete SQL-based Data Warehouse with a modular three-layer architecture (Bronze, Silver, and Gold). Its purpose is to consolidate, clean, and model raw CRM and ERP data into a reliable and analytics-ready structure. The project includes data ingestion, transformation, and storage processes, ensuring that the data is accessible for reporting and analysis. The architecture allows for scalability and flexibility, making it suitable for various data sources and business requirements. The source code is available on GitHub for anyone interested in exploring the implementation details. GitHub repository link: https://github.com/ObliMario/sql-data-warehause-project.git"
             }
         }
     }
