--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,11 +1,65 @@
 {
+    "tech": {
+        "unity": "Unity",
+        "csharp": "C#",
+        "js": "JS",
+        "canvas": "Canvas",
+        "vr": "VR"
+    },
+    "projects": {
+        "title": "Projects",
+        "subtitle": "A collection of my work and experiments",
+        "filters": {
+            "all": "All",
+            "search": "Search projects...",
+            "newest": "Newest",
+            "oldest": "Oldest",
+            "alphabetical": "A–Z"
+        },
+        "empty": {
+            "title": "No projects found",
+            "description": "Try different filters or search terms.",
+            "reset": "Show all"
+        },
+        "buttons": {
+            "viewDemo": "View Demo",
+            "viewGitHub": "View on GitHub"
+        }
+    },
     "home": {
         "title": "Welcome to my personal website.",
         "intro": "My name is Mario and in this blog I want to share with you my projects and interests. I hope you can find something you like and enjoy your visit.",
         "more": "If you want to know more about me and my projects, you can click on the menu on the top-right corner. There you will find detailed information about my skills and experience, as well as links to my most notable works. \n If you have any questions or comments, don't hesitate to contact me. I am always open to new opportunities and connecting with interesting people.",
         "thanks": "Thank you for visiting my website!",
         "contact": "If you want to get in touch, feel free to reach out through my social media profiles.",
-        "signature": "Mario"
+        "signature": "Mario",
+        "hero": {
+            "eyebrow": "IT Engineer & Web Developer",
+            "title": "Hello, I'm",
+            "name": "Mario Flor",
+            "subtitle": "I build performant, modern web experiences with React and a focus on clean architecture, animations, and great UX.",
+            "buttonProjects": "View Projects",
+            "buttonAbout": "About Me",
+            "techLabel": "Technologies"
+        },
+        "featured": {
+            "title": "Featured Projects",
+            "projects": {
+                "ai": {
+                    "title": "Artificial Intelligence Agent",
+                    "desc": "AI trained to collect coins and avoid enemies."
+                },
+                "jelly": {
+                    "title": "CS50 Jelly Game",
+                    "desc": "Puzzle game in Angry Birds style with 5 levels."
+                },
+                "vr": {
+                    "title": "FlorGame VR",
+                    "desc": "VR game with projectiles to activate flowers."
+                }
+            },
+            "cta": "Learn more →"
+        }
     },
     "menu": {
         "home": "Home",
@@ -121,42 +175,52 @@
         "posts": {
             "website": {
                 "title": "This website! (React)",
+                "description": "A personal portfolio website built with React.",
                 "content": "Welcome to my portfolio website! This website is built using React and React Router, and uses AWS S3 for hosting some of the elements. It features beautiful CSS animations and transitions, and is designed to be fully responsive and adapt to different screen sizes. The code is optimized for speed, ensuring that the page loads quickly for visitors. On this website, you can find some of my projects and learn more about my professional background and skills. I will continue to add more projects and updates to the website in the future. The source code for this website is available on GitHub for anyone who is interested. I hope you enjoy exploring my portfolio website and learning more about my work. Thank you for visiting!"
             },
             "AI-Game": {
                 "title": "Artificial Intelligence Agent (Unity)",
+                "description": "AI trained to play a simple game.",
                 "content": "I trained an artificial intelligence using reinforced learning so that it could learn to play a simple game where it had to collect coins while avoiding an enemy. Through training, the artificial intelligence improved its ability to play the game until it reached the maximum score. You can see how the artificial intelligence learns to play the game in the attached video. This project demonstrates my skills in using artificial intelligence and reinforced learning to solve problems and improve skills."
             },
             "jellygame": {
                 "title": "CS50 Jelly Game (Unity)",
+                "description": "A physics-based puzzle game developed for CS50G.",
                 "content": "This Game was developed as a final project of the course CS50G. A course imparted from Hardvard wich I completed and obtained a certificadte for it. The game developed (called CS50 Jelly) was made in Unity, it is a puzzle game that consists of completing a series of levels by driving a ball with the mouse by clicking the ball and dragging the mouse such as the launching mechanics in angry birds game. By right-clicking, the ball changes its material which will be necessary for some levels. CS50 Jelly consists of five levels that increase in difficulty. In this way, the game has a cohesive start-to-finish experience for the player when the player completes the last level. The player has some loss conditions such as when the ball collides with the spikes or falls out the stage, the player then will lose and repeat the level. Once the player completes the last level, a congratulations screen will appear for completing the game. However, the user can repeat any level to achieve the maximum score in all levels (3 stars) by reaching the goal with the minimum number of possible moves (which are shown on the screen). Reaching 3 stars at all levels can be a secondary goal. You can download the game from my personal Github: https://github.com/me50/ObliMario"
             },
             "pacman": {
                 "title": "Pacman Game (Unity)",
+                "description": "A classic arcade game implementation.",
                 "content": "Introducing PACMAN, the classic arcade game brought to life in Unity! This project is a faithful recreation of the original game, featuring the iconic maze and ghosts with authentic AI behavior. The map is generated dynamically by reading a .csv file, which allows for easy customization and variation. In addition to the classic gameplay, this game also includes a high score system that saves the top scores to a .txt file and displays them within the game. You can check out the source code for this project on GitHub at the following link: https://github.com/ObliMario/PACMAN"
             },
             "evo": {
                 "title": "Evolution Game (Unity)",
+                "description": "A simulation exploring evolutionary algorithms.",
                 "content": "Welcome to my game prototype! In this game, you can create and mix the genes of two different animals to create a new generation with unique characteristics. The genes of each animal determine their size and color, and the resulting offspring will inherit traits from their parents. This game is based on real DNA dynamics, providing an engaging and educational experience. As you experiment with different combinations of genes, you will see how the characteristics of the animals evolve and change. The game is still in development, but I hope to add more features and content in the future."
             },
             "DSEncryption": {
                 "title": "Encryption System made with Dinamic Systems (C)",
+                "description": "An encryption system based on dynamic mathematical systems.",
                 "content": "Introducing my thesis project: a software application that implements a generalized encryption and storage method, designed to be used on computers with the Linux-Ubuntu operating system. The software features a user-friendly graphical interface built using the Tkinter package. This project allows users to easily encode and decode any digital file, using the initial conditions of 'x0' as the encryption keys. To run the app, simply execute the 'GUI.py' python code. You can find the source code for this project on GitHub at the following link: https://github.com/ObliMario/DS_EncryptionSystem. I am proud of this project as it represents the culmination of my research and hard work in the field of cryptography and data security. I hope this software proves useful and valuable to other users. Thank you for checking out my thesis project."
             },
             "quiz": {
                 "title": "Quiz Program (Python)",
+                "description": "A customizable quiz application.",
                 "content": "Introducing my Quiz program! This program allows you to easily create and administer quizzes using a simple .txt file format. Simply enter the quiz data into the .txt file and the program will automatically read and display the questions and answers. As the user answers the questions, the program will track their score and provide feedback on their performance. At the end of the quiz, the user will receive their final score and can review the correct answers for any questions they may have gotten wrong. You can find the source code for this program on GitHub at the following link: https://github.com/ObliMario/quiz I hope you enjoy using my Quiz program and find it useful for creating and administering quizzes. Thank you for checking out my project!"
             },
             "deutschapp": {
                 "title": "Deutsch App (Flutter)",
+                "description": "A mobile application for learning German vocabulary.",
                 "content": "This app is developed in Flutter and is designed to help users learn German as a foreign language. In the 'Prepositions' section, a list of verbs with their most common prepositions is displayed. It also allows you to add new verbs, new prepositions, and reset the content to its initial state. When you open the practice screen, the verbs to study are shown. The app follows a flashcard model: it only shows the verb and asks you to think of the prepositions that go with it. By pressing 'Reveal prepositions,' the correct prepositions associated with the verb are displayed. When you tap on the card with the preposition, the meaning of the verb with that preposition is shown. From the verbs menu, you can search, modify, add, and delete any verb-preposition combination."
             },
             "florgame": {
                 "title": "FlorGame VR (Unity VR)",
+                "description": "A VR experiment involving projectile mechanics.",
                 "content": "This video showcases a demo of a VR game currently in development using Unity 6. The game challenges players to launch a projectile by applying an initial force and angle. A second hit can be applied mid-flight, guided by hand position, to correct its trajectory. Players can teleport to the ball’s location and are required to launch it again from the same X and Z coordinates—though the launch height remains flexible. The main objective is to activate all the flowers distributed throughout the map. Falling into water resets the player to the starting point, adding a light layer of challenge. Planned features include a timer and shot counter to enable leaderboard rankings, as well as multiple themed levels. Designed as a calm yet engaging experience, this game allows players to relax and enjoy the environment while honing their aiming skills."
             },
             "warehouse": {
                 "title": "SQL Warehouse Project",
+                "description": "A complete SQL-based Data Warehouse with modular design.",
                 "content": "This project implements a complete SQL-based Data Warehouse with a modular three-layer architecture (Bronze, Silver, and Gold). Its purpose is to consolidate, clean, and model raw CRM and ERP data into a reliable and analytics-ready structure. The project includes data ingestion, transformation, and storage processes, ensuring that the data is accessible for reporting and analysis. The architecture allows for scalability and flexibility, making it suitable for various data sources and business requirements. The source code is available on GitHub for anyone interested in exploring the implementation details. GitHub repository link: https://github.com/ObliMario/sql-data-warehause-project.git"
             }
         }
